--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "graphql": "^16.12.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -52,6 +54,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~19.1.10",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.25.0",
